--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body style="color: black; padding-top: 4cm;">
     <center><table cellspacing="15">
         <tr>
-          <th style="padding-bottom: 0;"><img src="/images/avatar.png" alt="That's me :)" height="200"></th>
+          <th style="padding-bottom: 0;"><img src="images/avatar.png" alt="That's me :)" height="200"></th>
         </tr>
 
         <tr>
