--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
 
         <table table cellpadding="10">
             <tr>
-                <th><a href="/about.html">About</a></th>
-                <th><a href="/portfolio.html">Portfolio</a></th>
-                <th><a href="/contact.html">Contact</a></th>
+                <th><a href="about.html">About</a></th>
+                <th><a href="portfolio.html">Portfolio</a></th>
+                <th><a href="contact.html">Contact</a></th>
             </tr>
           </table>
       </table>
